=== Rio - Ruby I/O Comfort Class

Rio is a class wrapping much of the functionality of 
IO, File, Dir, Pathname, FileUtils, Tempfile, StringIO, OpenURI, Zlib, and CSV.

To create the documentation for Rio run the command
  ruby build_doc.rb
from the distribution directory.

Then point your browser at the 'doc/rdoc' directory.

Suggested Reading
* RIO::Doc::SYNOPSIS
* RIO::Doc::INTRO
* RIO::Doc::HOWTO
* RIO::Rio

== New for version 0.3.9
* Bug fixes, code cleanup, 


== New for version 0.3.8
* Enhanced support for FTP file-systems. All of Rio's most powerful
  idioms are now supported seamlessly on FTP servers.

   # copy a file from or to an FTP server
   rio('ftp://ahost/adir/afile') > rio('localfile') # server -> local file
   rio('ftp://ahost/adir/afile') < rio('localfile') # local file -> server

   # copy an entire directory structure from or to an FTP server
   rio('ftp://ahost/adir') > rio('localdir') # server -> local directory
   rio('ftp://ahost/adir') < rio('localdir') # local directory -> server

  All of Rio's grande selection and filtering options are available for
  files and directories on FTP servers.

   # create a gzipped copy of a web page on an ftp server
   rio('ftp://ftphost/f.html.gz').gzip < rio('http://httphost/f.html')

   # dump the first 10 lines of a gzipped log file on an FTP server to stdout
   rio('ftp://ftphost/logfile.txt').lines(0...10) > ?-

   # iterate through the entries of a directory on an FTP server
   rio('ftp://ftphost/adir').entries { |entrio| ... }

   # get an array of all .rb files on an ftp server
   rb_files = rio('ftp://ftphost/').all.files['*.rb']

* More tests
* Bug fixes

== Version 0.3.7
* Maintenance release

== New for version 0.3.6
* Pipe operator and command pipes

  Pipe multiple commands
   rio('afile') | rio(?-,'acmd') | 'another_cmd' | ?-

  Run the same series of commands, with different input and/or output
   cmdpipe = rio(?-,'acmd') | rio(?-,'another_cmd')